--- a/PROD/plex_deployment/plex-external-iot.yaml
+++ b/PROD/plex_deployment/plex-external-iot.yaml
@@ -3,7 +3,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: plex-external-mgmt
+  name: plex-external-iot
   namespace: media
   # annotation to use vlan-mgmt IP address Pool
   annotations:
