--- a/PROD/heimdall_deployment/heimdall-pv-nfs.yaml
+++ b/PROD/heimdall_deployment/heimdall-pv-nfs.yaml
@@ -7,7 +7,7 @@ kind: PersistentVolume
 metadata:
   name: heimdall-pv
   namespace: default
-  lebels:
+  labels:
     app: heimdall
 spec:
   storageClassName: nfs
