--- a/PROD/homarr_deployment/homarr-deployment.yaml
+++ b/PROD/homarr_deployment/homarr-deployment.yaml
@@ -20,7 +20,7 @@ spec:
     spec:
       containers:
       - name: homarr
-        image: ghcr.io/homarr-labs/homarr:v1.44.0 #(updated 11/21/25)
+        image: ghcr.io/homarr-labs/homarr:v1.45.0 #(updated 11/30/25) - tested
         ports:
         - containerPort: 7575
           name: homarr-http
