--- a/DEV-Microk8s/influxDB_deployment/influxdb-clusterIP.yaml
+++ b/DEV-Microk8s/influxDB_deployment/influxdb-clusterIP.yaml
@@ -10,8 +10,8 @@ metadata:
 spec:
   type: ClusterIP # Default type, stable internal IP
   selector:
-    app: influxdb # Selects Pods with the 'app: influxdb' label
+    app: influxdb # Selects Pods with the 'app: label'
   ports:
   - protocol: TCP
     port: 8086         # Port the service listens on
-    targetPort: 8086 # Port name or number (8086) on the Pod to forward traffic to
+    targetPort: 8086 # Port number on the Pod to forward traffic to
