--- a/DEV-Microk8s/nginx_deployment/nginx-external.yaml
+++ b/DEV-Microk8s/nginx_deployment/nginx-external.yaml
@@ -1,16 +1,16 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: influxdb-external
-  namespace: default 
+  name: nginx-external
+  namespace: nginx
 spec:
   selector:
-    app: influxdb # This label should match your Deployment's pod labels
+    app: nginx # This label should match your Deployment's pod labels
   ports:
     - protocol: TCP
       port: 80       # External port for the Service (what you connect to)
-      targetPort: 8086 # Internal port of the container deployment
+      targetPort: 80 # Internal port of the container deployment
       name: http
   type: LoadBalancer 
-  loadBalancerIP: 10.0.100.15 #target IP for the service.
+  loadBalancerIP: 10.0.100.5 #target IP for the service.
 # test to see if can direct to container deployment without specifing the port.
