--- a/DEV-Microk8s/nginx_deployment/nginx-pvc-nfs.yaml
+++ b/DEV-Microk8s/nginx_deployment/nginx-pvc-nfs.yaml
@@ -6,10 +6,10 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: influxdb-pvc  # pvc claim name
-  namespace: default
+  name: nginx-pvc  # pvc claim name
+  namespace: nginx
   labels:
-    app: influxdb
+    app: nginx
 spec:
   storageClassName: nfs
   accessModes:
@@ -19,4 +19,4 @@ spec:
       storage: 10Gi  # Must be equal or less than PV claim
   selector:
     matchLabels:
-      app: influxdb # This label should match the labels of your PV
+      app: nginx # This label should match the labels of your PV
