--- a/PROD/homarr_deployment/homarr-deployment.yaml
+++ b/PROD/homarr_deployment/homarr-deployment.yaml
@@ -20,7 +20,7 @@ spec:
     spec:
       containers:
       - name: homarr
-        image: ghcr.io/homarr-labs/homarr:v1.46.0 #(updated 12/14/25) - tested
+        image: ghcr.io/homarr-labs/homarr:v1.47.0 #(updated 12/19/25)
         ports:
         - containerPort: 7575
           name: homarr-http
