--- a/DEV-Microk8s/nginx_deployment/nginx-deployment.yaml
+++ b/DEV-Microk8s/nginx_deployment/nginx-deployment.yaml
@@ -9,6 +9,7 @@ metadata:
     app: nginx
 spec:
   replicas: 3
+  revisionHistoryLimit: 2  # Max number of replicasets
   selector:
     matchLabels:
       app: nginx # Must match labels on the Pod template
