--- a/DEV-Microk8s/postgreSQL_homarr_deployment/postgre-homarr-deployment.yaml
+++ b/DEV-Microk8s/postgreSQL_homarr_deployment/postgre-homarr-deployment.yaml
@@ -17,10 +17,10 @@ spec:
       labels:
         app: postgrehomarr # Labels applied to the Pod
     spec:
-      securityContext: # Need to add to run container as admin since NFS share is set to Map as admin.
-        runAsUser: 1001           # Running as admin
-        runAsGroup: 1001         # Running as admin
-        #fsGroup: 1024
+      securityContext:
+        runAsUser: 977    # Matches the UNAS 'squashed' root ID
+        runAsGroup: 988   # Matches the UNAS GID
+        fsGroup: 988      # Helps K8s manage volume permissions
       containers:
       - name: postgres-homarr
         # Use an official Postgres image. Consider pinning to a specific version (e.g., postgres:15) for stability.
