--- a/DEV-Microk8s/postgreSQL_homarr_deployment/postgre-homarr-deployment.yaml
+++ b/DEV-Microk8s/postgreSQL_homarr_deployment/postgre-homarr-deployment.yaml
@@ -18,9 +18,9 @@ spec:
         app: postgrehomarr # Labels applied to the Pod
     spec:
       securityContext: # Need to add to run container as admin since NFS share is set to Map as admin.
-        runAsUser: 1024           # Running as admin
-        runAsGroup: 101         # Running as admin
-        fsGroup: 101
+        runAsUser: 1001          # Running as admin
+        runAsGroup: 1001         # Running as admin
+        # fsGroup: 101
       containers:
       - name: postgres-homarr
         # Use an official Postgres image. Consider pinning to a specific version (e.g., postgres:15) for stability.
@@ -52,8 +52,8 @@ spec:
           mountPath: /var/lib/postgresql/data
         #security context for container:
         securityContext:
-          runAsUser: 1024 #so container can modify storage as it needs.
-          runAsGroup: 101
+          runAsUser: 1001 #so container can modify storage as it needs.
+          runAsGroup: 1001
           allowPrivilegeEscalation: false
         # --- Optional but Recommended ---
         resources:
