update prod homarr minor version.

--- a/DEV-Microk8s/homarr_deployment/homarr-deployment.yaml
+++ b/DEV-Microk8s/homarr_deployment/homarr-deployment.yaml
@@ -8,7 +8,7 @@ metadata:
   labels:
     app: homarr
 spec:
-  replicas: 2 # one replica; multiples can cause issues with homarr
+  replicas: 2
   revisionHistoryLimit: 2  # Max number of replicasets
   selector:
     matchLabels:
