update DEV pihole version

--- a/DEV-Microk8s/homarr_deployment/homarr-deployment.yaml
+++ b/DEV-Microk8s/homarr_deployment/homarr-deployment.yaml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
       - name: homarr
-        image: ghcr.io/homarr-labs/homarr:v1.53.1
+        image: ghcr.io/homarr-labs/homarr:v1.53.1 #(2/18/26)
         ports:
         - containerPort: 7575
           name: homarr-http
