--- a/DEV-Microk8s/pihole_mgmt_deployment/pihole-mgmt-deployment.yaml
+++ b/DEV-Microk8s/pihole_mgmt_deployment/pihole-mgmt-deployment.yaml
@@ -25,7 +25,7 @@ spec:
         node.kubernetes.io/microk8s-worker: microk8s-worker
       containers:
       - name: pihole-mgmt
-        image: pihole/pihole:2025.11.1 # repot/app:version. (updated to latest version 11/28/2025)
+        image: ppihole/pihole:2026.02.0 # repot/app:version. (updated to latest version 2/18/2026)
         ports:
         - containerPort: 443 # The port the application needs to connect to an HTTPS web socket.
           name: pihole-m-https # Name of the port.
